[package]
name = "solana-mint-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-mint-generator"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18"
bs58 = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] } 